<resources>
    <string name="app_name">Clipaholic</string>
    <string name="new_user_information"><u>New user? Register now</u></string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="link_example"><![CDATA[Example: https://www.youtube.com/watch?v=LUO5qhpD2pA&t=1792s]]></string>
    <string name="home">Home</string>
    <string name="download_list">Download list</string>
    <string name="history">History</string>
    <string name="log_in">LOG IN</string>
    <string name="title">Title</string>
    <string name="number_of_views">Number of views</string>
    <string name="description">Description</string>
    <string name="downloadButton">DOWNLOAD</string>
    <string name="add_to_listButton">ADD TO LIST</string>
    <string name="delete_from_list_button">DELETE</string>
    <string name="already_have_an_account">Already have an\n
        Account?</string>
    <string name="welcome">Welcome!</string>
    <string name="email">Email</string>
    <string name="get_on_nboard_nregister_nnow">Get on Board!\n
        Register now.</string>
    <string name="please_fill_out_the_form">Please fill out the form</string>
    <string name="user_name_tip">User name</string>
    <string name="email_tip">Email</string>
    <string name="password_tip">Password</string>
    <string name="repeat_password_tip">Repeat password</string>
    <string name="show_password">Show password</string>
    <string name="register">REGISTER</string>
    <string name="password_requirements">Your password should meet the following requirements:\n1.8 characters minimum,\n2.At least one uppercase and one lowercase letter,\n3.At least one number and a special character.</string>
    <string name="reset_password_info">Please enter the email address used to create your account and we will send you a link to reset your password.</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="forget_it_n_don_t_worry">Forget it?\nDo not Worry!</string>
    <string name="your_profile">Your profile</string>
    <string name="log_out">Log out</string>
    <string name="application">Application</string>
    <string name="communicate">Communicate</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="help_and_support">Help and Support</string>
    <string name="download">DOWNLOAD</string>
    <string name="put_the_link_here">Put the link here:</string>
    <string name="please_wait">Please wait…</string>
    <string name="format">Format</string>
    <string name="go_to_the_next_section">Go to the next section</string>
    <string name="check_link">Check link</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="forgot_your_password"><u>Forgot your password?</u></string>
    <string name="youtube">YouTube</string>
    <string name="delete_all_history">DELETE ALL HISTORY</string>
    <string name="vimeo">Vimeo</string>
</resources>