<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/account">
        <menu>
            <group>
                <item
                    android:id="@+id/profile_item"
                    android:icon="@drawable/ic_baseline_account_circle_24"
                    android:title="@string/your_profile" />
                <item
                    android:id="@+id/log_out_item"
                    android:icon="@drawable/ic_baseline_exit_to_app_24"
                    android:title="@string/log_out" />
            </group>
        </menu>
    </item>

    <item
        android:title="@string/application">
        <menu>
            <group>
                <item
                    android:id="@+id/settings"
                    android:icon="@drawable/ic_baseline_settings_24"
                    android:title="@string/settings" />
            </group>
        </menu>
    </item>

    <item
        android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/help_and_support_item"
                android:icon="@drawable/ic_baseline_help_24"
                android:title="@string/help_and_support" />
        </menu>
    </item>
</menu>