<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/app_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/hello_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:text="@string/already_have_an_account"
            android:textAlignment="center"
            android:lines="3"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <ImageView
            android:layout_marginTop="15sp"
            android:layout_marginEnd="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:scaleX="1.8"
            android:scaleY="1.8"
            app:srcCompat="@mipmap/login_icon_foreground"/>

        <RelativeLayout
            android:background="@drawable/layout_rounded_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/hello_text_view"
            android:layout_margin="10sp">

            <TextView
                android:id="@+id/welcome_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/welcome"
                android:layout_margin="5sp"
                android:textStyle="bold"
                android:textColor="#4169E1"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/email_field"
                android:layout_below="@id/welcome_text_view"
                android:singleLine="true"
                android:textSize="16sp"
                android:layout_margin="5sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="text" />

            <EditText
                android:id="@+id/password_field"
                android:layout_below="@id/email_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_margin="5sp"
                android:textSize="16sp"
                android:singleLine="true"
                android:hint="Password"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/forgot_password_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/password_field"
                android:layout_margin="5sp"
                android:textSize="15sp"
                android:text="@string/forgot_your_password"
                android:textStyle="bold"
                android:textColor="#4169E1"/>

            <Button
                android:id="@+id/login_button"
                android:width="250sp"
                android:layout_margin="5sp"
                android:backgroundTint="@color/button_background"
                android:layout_centerHorizontal="true"
                android:textSize="14sp"
                android:layout_below="@id/forgot_password_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in"/>

            <ProgressBar
                android:id="@+id/wait_for_login_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="5sp"
                android:layout_below="@id/password_field"
                android:indeterminate="true"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/register_text_view"
                android:layout_marginTop="5sp"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:layout_marginBottom="50sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_button"
                android:text="@string/new_user_information"
                android:layout_centerHorizontal="true"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="#4169E1"/>

            <View
                android:layout_below="@id/register_text_view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"/>

            <TextView
                android:id="@+id/line2"
                android:layout_margin="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_below="@id/register_text_view"
                android:text="Use other Methods"
                android:layout_centerHorizontal="true"
                android:textStyle="bold" />

            <com.google.android.gms.common.SignInButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/google_sing_in_button"
                android:layout_margin="5sp"
                android:layout_below="@id/line2" />

        </RelativeLayout>
    </RelativeLayout>
</ScrollView>