<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/app_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/hello_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:text="@string/forget_it_n_don_t_worry"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <ImageView
            android:layout_alignParentEnd="true"
            android:layout_margin="40sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="2.3"
            android:scaleY="2.3"
            app:srcCompat="@mipmap/reset"/>

        <RelativeLayout
            android:id="@+id/form_layout"
            android:background="@drawable/layout_rounded_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="10sp">

            <TextView
                android:id="@+id/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Password Reset"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_centerHorizontal="true"
                android:textColor="@color/text_color"
                android:layout_margin="5sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_below="@id/header"
                android:id="@+id/welcome_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_password_info"
                android:layout_margin="5sp"
                android:textStyle="bold"
                android:textColor="#4169E1"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/reset_password_email_edit_text"
                android:layout_below="@id/welcome_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:layout_margin="5sp"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="text" />

            <Button
                android:id="@+id/reset_password_button"
                android:layout_below="@id/reset_password_email_edit_text"
                android:width="250sp"
                android:layout_margin="5sp"
                android:backgroundTint="@color/button_background"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_password"/>

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/wait_for_send_reset_email_progress_bar"
            android:layout_below="@+id/form_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100sp"
            android:indeterminate="true"
            android:visibility="invisible"/>

    </RelativeLayout>
</RelativeLayout>