<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginBottom="55dp"
    android:animateLayoutChanges="true"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/app_background"
        android:animateLayoutChanges="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:animateLayoutChanges="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10sp"
                android:animateLayoutChanges="true">

                <ImageButton
                    android:id="@+id/show_youtube_history"
                    android:layout_width="wrap_content"
                    android:layout_height="35sp"
                    android:backgroundTint="@color/button_background"
                    android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
                    />

                <TextView
                    android:layout_margin="5sp"
                    android:id="@+id/yt_history_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/youtube"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/youtube_history_recycler_view"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10sp"
            android:animateLayoutChanges="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:animateLayoutChanges="true">

                <ImageButton
                    android:id="@+id/show_vimeo_history"
                    android:layout_width="wrap_content"
                    android:layout_height="35sp"
                    android:backgroundTint="@color/button_background"
                    android:src="@drawable/ic_baseline_keyboard_arrow_down_24" />

                <TextView
                    android:layout_margin="5sp"
                    android:id="@+id/title_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vimeo"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/vimeo_history_recycler_view"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/delete_history_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button_background"
                android:text="@string/delete_all_history"/>

        </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
